[package]
name = "luxembourg-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.25.0"
egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "0.24", features = ["jpeg", "png"] }
eframe = "0.25.0"
env_logger = "0.11.0"
log = "0.4.20"
dotenv = "0.15.0"
roxmltree = "0.19.0"
