[package]
name = "luxembourg-rs"
authors = ["Adrian Calavie <adrian.calavie06@gmail.com>"]
description = "luxembourg.rs is a 2D map traversal application written in Rust."
version = "0.1.1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.25.0"
egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "0.24", features = ["jpeg", "png"] }
eframe = { version = "0.25.0", features = ["wgpu"] }
env_logger = "0.11.0"
log = "0.4.20"
dotenv = "0.15.0"
roxmltree = "0.19.0"
tokio = { version = "1.35.1", features = ["full"] }
rayon = "1.8.1"
num_cpus = "1.16.0"
once_cell = "1.19.0"
egui-toast = "0.11.0"
priority-queue = "1.3.2"
rand = "0.8.5"
enum-iterator = "1.5.0"
